# tutorial-popl20

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-tutorial-popl20.opam  gen-exercises.awk  mk-exercises.sh  opam
exercises/: compatibility.v  demo.v  demo_interactive.v  fundamental.v  interp.v  language.v  parametricity.v  polymorphism.v  safety.v  sem_operators.v  sem_type_formers.v  sem_typed.v  sem_types.v  symbol_ghost.v  two_state_ghost.v  typed.v  types.v  unsafe.v
solutions/: compatibility.v  demo.v  demo_interactive.v  fundamental.v  interp.v  language.v  parametricity.v  polymorphism.v  safety.v  sem_operators.v  sem_type_formers.v  sem_typed.v  sem_types.v  symbol_ghost.v  two_state_ghost.v  typed.v  types.v  unsafe.v
theories/: base.v  compatibility.v  demo.v  exercises_answers.v  fundamental.v  interp.v  language.v  parametricity.v  polymorphism.v  safety.v  sem_operators.v  sem_type_formers.v  sem_typed.v  sem_types.v  sem_typing.v  symbol_ghost.v  two_state_ghost.v  typed.v  types.v  typing.v  unsafe.v
